# Mainframe-Modernization

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.ps1  deploy.ps1  docker-compose.yml  main.rs  run_all.ps1
.github/workflows/: RUST.yml  docker-build-push.yml
agent_gateway/: Cargo.toml  Dockerfile
agent_gateway/src/: main.rs
ai_mcp/: Cargo.toml  Dockerfile
ai_mcp/src/: main.rs
cobol_mcp/: Cargo.toml  Dockerfile
cobol_mcp/src/: main.rs
data/: loan_data.json
gemini_mcp/: Cargo.toml  Dockerfile
gemini_mcp/src/: main.rs
green_agent/: Cargo.toml  Dockerfile
green_agent/src/: main.rs
helm/mainframe-modernization/: values.yaml
k8s/base/: 00-namespace-rbac.yaml  01-secrets-config.yaml  02-agent-gateway.yaml  03-agents.yaml  04-network-policy.yaml
legacy_source/: interest_calc.cbl
purple_agent/: Cargo.toml  Dockerfile
purple_agent/src/: main.rs
rust_mcp/: Cargo.toml  Dockerfile
rust_mcp/src/: main.rs
s3_mcp/: Cargo.toml  Dockerfile
s3_mcp/src/: main.rs
