[package]
name = "agent-gateway"
version = "1.0.0"
edition = "2021"
description = "Authentication & Authorization gateway for MCP servers - Mainframe Modernization Pipeline"

[[bin]]
name = "agent-gateway"
path = "src/main.rs"

[dependencies]
actix-web = "4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
