[package]
name = "ai-mcp"
version = "1.0.0"
edition = "2021"
description = "ai MCP Server - AI-powered COBOL to Rust translation"

[[bin]]
name = "ai-mcp"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
