[package]
name = "cobol-mcp"
version = "1.0.0"
edition = "2021"
description = "COBOL MCP Server - compiles and executes COBOL via GnuCOBOL"

[[bin]]
name = "cobol-mcp"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
