[package]
name = "green_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55"
aws-sdk-s3 = "0.25"
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"