[package]
name = "rust-mcp"
version = "1.0.0"
edition = "2021"
description = "Rust MCP Server - compiles and executes Rust code via Cargo"

[[bin]]
name = "rust-mcp"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
num-format = { version = "0.4", features = ["with-system-locale"] }
num-traits = "0.2"
